--- a/Progress Steps/style.css
+++ b/Progress Steps/style.css
@@ -1,12 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Muli&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
+
+:root {
+  --line-border-fill: #3498db;
+  --line-border-empty: #e8e8e8;
+}
 
 * {
   box-sizing: border-box;
 }
 
 body {
+  background-color: #fff;
   font-family: 'Muli', sans-serif;
-  background-color: #f6f7fb;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -22,54 +27,55 @@ body {
 .progress-container {
   display: flex;
   justify-content: space-between;
+  position: relative;
   margin-bottom: 30px;
-  width: 350px;
   max-width: 100%;
+  width: 350px;
 }
 
 .progress-container::before {
-    content: '';
-    background-color: #e0e0e0;
-    position: absolute;
-    top: 50%;
-    left:20%;
-    transform: translateY(-50%);
-    height: 4px;
-    width: 100%;
-    z-index: -1;
-    transition: 0.4s ease-in;
-}
-.progress {
+  content: '';
+  background-color: var(--line-border-empty);
   position: absolute;
   top: 50%;
-  left:0;
+  left: 0;
+  transform: translateY(-50%);
+  height: 4px;
+  width: 100%;
+  z-index: -1;
+}
+
+.progress {
+  background-color: var(--line-border-fill);
+  position: absolute;
+  top: 50%;
+  left: 0;
   transform: translateY(-50%);
   height: 4px;
   width: 0%;
   z-index: -1;
-  transition: 0.4s ease-in;
-  background-color: #3498db;
+  transition: 0.4s ease;
 }
 
 .circle {
-  background-color: #fff;
-  color: #999;
+  background-color: #e8e8e8;
+  color:#1f1f1f;
   border-radius: 50%;
   height: 30px;
   width: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 3px solid #e0e0e0;
+  border: 3px solid var(--line-border-empty);
   transition: 0.4s ease;
 }
 
 .circle.active {
-  border-color: #3498db;
+  border-color: var(--line-border-fill);
 }
 
 .btn {
-  background-color: #3498db;
+  background-color: var(--line-border-fill);
   color: #fff;
   border: 0;
   border-radius: 6px;
@@ -89,21 +95,6 @@ body {
 }
 
 .btn:disabled {
-  background-color: #e0e0e0;
+  background-color: var(--line-border-empty);
   cursor: not-allowed;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
